src/test/deca/context/invalid/result/testsContex.deca
{
	int a = 1;
	int b = 2;
	float c = 0.5;
	float d = 2.5;
	boolean e = true;
	boolean f = false;
	e = e || f;
	f = f && e;
	e = !e;
	f = (3 == 5);
}
